- - -

# 2012-01-18

## Summary View
* Added mock data
* Added sparklines

## Timeline View
* Added patient name

- - -

# 2012-01-16

## Summary View
* Redesign

- - -

# 2012-01-11

## Timeline View
* Updated to latest version with speed improvements
* Added Encounter parsing

- - -

# 2012-01-09

## Timeline View
* Updated to latest timeline simile.

## Doctors View
* Changed a few doctor titles
* Moved doctor detail view back arrow

## Patient Summary
* Fixed Johnny's name
* Aligned patient name with age and gender

- - -

# 2012-01-06

## Timeline View
* Updated to latest timeline simile.

- - -

# 2012-01-04

* Hide the window when the app goes to background to protect against caching screenshots of the screen. To test just double click the home button.
* Added TestFlight checkpoints to see how users are testing the app.
* Added Pinview (0000) whenever the app comes to foreground

## About View
* Added shadow and font changes to about text

## Doctors View
* Added 6 doctors

## Messages Vie
* Number of messages in segmented control is now dynamic based on the actual number of messages

## Timeline
* Added current SIMILE timeline
* Disabled events that cause the keyboard to show

- - -

# 2011-12-27

* Added privacy education and warning screen which shows on first launch. The user is asked to lock their iPad to check if the passcode is enabled and then tells the user if it is or not.

- - -

# 2011-12-20

* Research on passcode verification

## Messages View
* Added dynamic content, still waiting on mock data to fill real messages in

## Doctors View
* Added hospital when selected fades in a doctor detail view

- - -

# 2011-12-14

* Added TestFlight checkpoints to check usage

## Summary View
* Added variable DOB, phone number, place of birth, race, ethicity
* Added fade out/fade in of info when switching users
* Fixed issue when trying to swipe when at first or last patient

- - -

# 2011-12-05
