@@ -1125,11 +1125,40 @@ QWNhZGVteSBvZiBGYW1pbHkgUGh5c2ljaWFucy4</bytes>
 						<reference key="IBUIFontDescription" ref="974251319"/>
 						<reference key="IBUIFont" ref="530901573"/>
 					</object>
+					<object class="IBUILabel" id="79786398">
+						<reference key="NSNextResponder" ref="646824382"/>
+						<int key="NSvFlags">1316</int>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrame">{{215, 15}, {394, 34}}</string>
+						<reference key="NSSuperview" ref="646824382"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="979711106"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<string key="IBUIText">JOHNNY SMITH</string>
+						<reference key="IBUITextColor" ref="330348153"/>
+						<nil key="IBUIHighlightedColor"/>
+						<string key="IBUIShadowOffset">{0, 1}</string>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
+							<double key="pointSize">31</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">31</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
 				</array>
 				<string key="NSFrame">{{0, 64}, {1024, 660}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="979711106"/>
+				<reference key="NSNextKeyView" ref="79786398"/>
 				<string key="NSReuseIdentifierKey">_NS:212</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1177,6 +1206,14 @@ QWNhZGVteSBvZiBGYW1pbHkgUGh5c2ljaWFucy4</bytes>
 						<reference key="destination" ref="766721923"/>
 					</object>
 					<int key="connectionID">32</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">nameLabel</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="79786398"/>
+					</object>
+					<int key="connectionID">83</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1353,6 +1390,7 @@ QWNhZGVteSBvZiBGYW1pbHkgUGh5c2ljaWFucy4</bytes>
 							<reference ref="90642403"/>
 							<reference ref="1052634010"/>
 							<reference ref="539981828"/>
+							<reference ref="79786398"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Doctor List View</string>
@@ -1608,6 +1646,11 @@ QWNhZGVteSBvZiBGYW1pbHkgUGh5c2ljaWFucy4</bytes>
 						<reference key="object" ref="1052634010"/>
 						<reference key="parent" ref="646824382"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">82</int>
+						<reference key="object" ref="79786398"/>
+						<reference key="parent" ref="646824382"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1733,6 +1776,9 @@ QWNhZGVteSBvZiBGYW1pbHkgUGh5c2ljaWFucy4</bytes>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="8.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="8.showNotes"/>
+				<string key="82.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<reference key="82.IBUserGuides" ref="0"/>
+				<boolean value="NO" key="82.showNotes"/>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="9.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="9.showNotes"/>
@@ -1741,7 +1787,7 @@ QWNhZGVteSBvZiBGYW1pbHkgUGh5c2ljaWFucy4</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">81</int>
+			<int key="maxID">83</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
